--- a/CreateTest/templates/CreateTest/dashboard.html
+++ b/CreateTest/templates/CreateTest/dashboard.html
@@ -152,6 +152,20 @@
                 </div>
               </div>
             </li>
+            <li class="list-group-item">
+              <div class="row">
+                <div class="col-md-3 pl-2 my-auto">
+                  <div class="card-title text-muted my-auto h6 text-uppercase">
+                    Password Tes
+                  </div>
+                </div>
+                <div class="col-md-9 pl-2">
+                  <div class="card-text my-auto">
+                    {{q_testPackage.passwordTest}}
+                  </div>
+                </div>
+              </div>
+            </li>
     </ul>
   </div>
 
