--- a/CreateTest/templates/CreateTest/snippets/navbar.html
+++ b/CreateTest/templates/CreateTest/snippets/navbar.html
@@ -22,7 +22,7 @@
         </li>
       </ul>
       <button class="navbar-toggler navbar-toggler-right d-lg-none align-self-center" type="button" data-toggle="offcanvas">
-        <span class="ti-view-list"></span>
+        <span class="bi bi-list"></span>
       </button>
     </div>
   </nav>
